--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "version": 2,
     "builds": [
-      { "src": "FoodOrdering/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
+      { "src": "foodOrdering/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
       { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "staticfiles" } }
     ],
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
-      { "src": "/(.*)", "dest": "FoodOrdering/wsgi.py" }
+      { "src": "/(.*)", "dest": "foodOrdering/wsgi.py" }
     ]
   }
   
