--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
     "version": 2,
     "builds": [
-      { "src": "foodOrdering/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
-      { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "staticfiles" } }
+      { "src": "foodOrdering/wsgi.py", "use": "@vercel/python",
+       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
+      { "src": "build_files.sh", "use": "@vercel/static-build",
+       "config": { "distDir": "staticfiles" } }
     ],
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
