--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
     "version": 2,
     "builds": [
-      { "src": "foodOrdering/wsgi.py", "use": "@vercel/python",
-       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
-      { "src": "build_files.sh", "use": "@vercel/static-build",
-       "config": { "distDir": "staticfiles" } }
+      { "src": "foodOrdering/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
+      { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "staticfiles" } }
     ],
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
       { "src": "/(.*)", "dest": "foodOrdering/wsgi.py" }
+    ],
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
   
